04-deploy-k8s/one-for-all/deploy-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
---

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend-service
  namespace: ecommerce
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ecommerce-backend
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-service
  namespace: ecommerce
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: ecommerce-frontend
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend-deployment
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
        - name: ecommerce-backend
          image: ntdat09mister/ecommerce-backend:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            requests:
              cpu: "300m"
          volumeMounts:
            - mountPath: /run/src/main/resources/application.properties
              name: ecommerce-backend-application-properties-config-volume
              subPath: application.properties
      volumes:
        - configMap:
            defaultMode: 420
            name: ecommerce-backend-application-properties-configmap
          name: ecommerce-backend-application-properties-config-volume
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend-deployment
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecommerce-frontend
    spec:
      containers:
        - image: ntdat09mister/ecommerce-frontend:v1
          imagePullPolicy: Always
          name: ecommerce-frontend
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-frontend-ingress
  namespace: ecommerce
spec:
  ingressClassName: haproxy
  rules:
    - host: ecommerce.danny.vn
      http:
        paths:
          - backend:
              service:
                name: ecommerce-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend-ingress
  namespace: ecommerce
spec:
  ingressClassName: haproxy
  rules:
    - host: api-ecommerce.danny.vn
      http:
        paths:
          - backend:
              service:
                name: ecommerce-backend-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
